# cv-detection-tracking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  sentinel.example.toml
demos/: README.md
src/: config.py  logging.py  server.py
src/api/: app.py  dependencies.py  middleware.py  routes.py  utils.py
src/detection/: service.py
src/sentinel/: cli.py  config.py
src/sentinel/api/: app.py  routes.py
src/sentinel/detection/: models.py
src/tracking/: models.py  service.py  utils.py
tests/: test_config.py  test_detection.py
