[project]
name = "cv-detection-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.121.2",
    "lap>=0.5.12",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "structlog>=25.5.0",
    "supervision>=0.26.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.228",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
